--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "PaddleOCR"]
 	path = PaddleOCR
-	url = https://github.com/Sknp1006/PaddleOCR.git
+	url = https://github.com/Sknp1006/PaddleOCR
